@@ -147,11 +147,6 @@ exportMethods(plot)
 exportMethods(reroot)
 exportMethods(scale_color)
 exportMethods(show)
-importFrom(Biostrings,BStringSet)
-importFrom(Biostrings,DNAStringSet)
-importFrom(Biostrings,GENETIC_CODE)
-importFrom(Biostrings,readBStringSet)
-importFrom(Biostrings,toString)
 importFrom(ape,Nnode)
 importFrom(ape,Ntip)
 importFrom(ape,drop.tip)
@@ -232,9 +227,14 @@ importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,add)
 importFrom(magrittr,equals)
+importFrom(methods,"slot<-")
+importFrom(methods,.hasSlot)
+importFrom(methods,is)
+importFrom(methods,missingArg)
+importFrom(methods,new)
 importFrom(methods,show)
+importFrom(methods,slot)
 importFrom(stats4,plot)
 importFrom(tidyr,gather)
 importFrom(utils,download.file)
 importFrom(utils,modifyList)
-importMethodsFrom(Biostrings,width)
